# VR-gorgon

./: .gitignore  LICENSE  README.md
vr-gorgon/: Cargo.toml  build.rs
vr-gorgon/src/: control_panel.rs  drawcore.rs  gorgon-sphere-axes.glsl  gorgon-spiral.glsl  gorgon1.rs  lib.rs  rainbow_triangle.rs  scene.rs  sprites.rs  suzanne.rs  text_painting.rs  thumbstick_smoother.rs  xr_input.rs
vr-gorgon/src/shaders/: mod.rs
